# microburst_dispersion

./: .gitignore  README.md  requirements.txt  setup.cfg
data/: FU3_microburst_catalog_05.csv  FU3_spectral_data.csv  FU4_microburst_catalog_05.csv  FU4_spectral_data.csv  fb_campaigns.csv  firebird_interesting_dispersion_examples.xlsx
microburst_dispersion/: __init__.py  __main__.py  firebird.py  fit_dispersion.py  fit_duration.py  plot_dispersion.py
microburst_dispersion/scripts/: 20150202_event_fit_dispersion.py  20150827_event_fit_dispersion.py  equatorial_size.py  organize_interesting_events.py  plot_dispersion_loop.py  spectrum_evolution.py
