[metadata]
name = microburst_dispersion
version = 0.0.1
description = 'Calculate the time of flight dispersion of electron microburst precipitation'
long_description = file: README.md 
url='https://github.com/mshumko/microburst_dispersion'
author='M. Shumko'
author_email='msshumko@gmail.com'
long_description_content_type = text/markdown
keywords = FIREBIRD, microburst, time-of-flight
python_requires='>=3.8'
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires = 
    matplotlib
    numpy
    pandas
    sampex  # For its downloader.
    bump2version==1.0.1
    cdflib
    scipy
    scikit-learn